syntax = "proto3";

package user_service;

import "types.proto";

message GetUserRequest {
  common.PasswordUser user = 1;
}

message GetUserResponse {
  common.PasswordUser user = 1;
  string error_message = 2;
}

message CreateUserRequest {
  common.PasswordUser user = 1;
}

message CreateUserResponse {
  common.PasswordUser user = 1;
}

message EditUserRequest {
  common.PasswordUser user = 1;
}

message EditUserResponse {
  common.PasswordUser user = 1;
  string error_message = 2;
}

message DeleteUserRequest {
  uint64 user_id = 1;
}

message DeleteUserResponse {
  string error_message = 1;
}

